[package]
name = "backend"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2018"

[dependencies]
mytodo = { path = ".." }
diesel = { version = "1.0.0", features = ["sqlite"] }
rocket = "0.4.7"
rocket_cors = { version = "0.5.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_sqlite_pool"]
